fixed landing section responsive spacing

--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -4,6 +4,12 @@
 
 @media( min-width: 31.25em) {
     main {
-        padding:  0rem 10vw;
+        padding: 0 10vw;
+    }
+}
+
+@media (min-width: 50em) {
+    main {
+        padding-top: 73px;
     }
 }
